text returns to black if within limits

--- a/index.html
+++ b/index.html
@@ -54,14 +54,26 @@
       if (field1 > 500) {
         $('#field1').css('color', 'red');
       }
+      else{
+        $('#field1').css('color', 'black');
+      }
       if (field2 > 25) {
         $('#field2').css('color', 'red');
+      }
+      else{
+        $('#field2').css('color', 'black');
       }
       if (field3 > 5) {
         $('#field3').css('color', 'red');
       }
+      else{
+        $('#field3').css('color', 'black');
+      }
       if (field4 < 6.5 || field4 > 8.5) {
         $('#field4').css('color', 'red');
+      }
+      else{
+        $('#field4').css('color', 'black');
       }
     }
 
