--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <!--Styling/CSS stuff-->
 
   <link rel="stylesheet" href="styling.css">
+  <link rel="icon" type="image/x-icon" href="Media/favicon_01.png">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
