--- a/Water-Quality-Measurement (another copy)/public/index.html
+++ b/Water-Quality-Measurement (another copy)/public/index.html
@@ -83,6 +83,13 @@
     });
 
   </script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("yA8iLWs9wHIzVwD4e");
+    })();
+  </script>
 </head>
 
 <body>
